Add "dataType" member to ComputedColumn structure.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1689,7 +1689,7 @@ Structure.OdaProperty.value=Value
 Structure.ParamBinding.paramName=Parameter Name
 Structure.ParamBinding.expression=Expression
 
-#14. Column
+#14. ResultSetColumn
 Structure.ResultSetColumn.position=Position
 Structure.ResultSetColumn.name=Name
 Structure.ResultSetColumn.dataType=Data Type
@@ -1697,6 +1697,7 @@ Structure.ResultSetColumn.dataType=Data Type
 #15. ComputedColumn
 Structure.ComputedColumn.name=Column Name
 Structure.ComputedColumn.expression=Expression
+Structure.ComputedColumn.dataType=Data Type
 
 #16. ColumnHint
 Structure.ColumnHint.columnName=Column Name
