Move the "includeResource" property from ReportDesign to Module

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1830,6 +1830,7 @@ Element.Module.configVars=Config variables
 Element.Module.images=Images
 Element.Module.includeLibraries=Include libraries
 Element.Module.includeScripts=Include scripts
+Element.Module.includeResource=Include resource
 Element.Module.base=Base
 
 # Library ( Prefix = Element.Library )
@@ -1844,7 +1845,6 @@ Element.Library.slot.components=Components
 #1. Report Design ( Prefix = Element.ReportDesign )
 Element.ReportDesign.units=Units
 Element.ReportDesign.refreshRate=Refresh rate
-Element.ReportDesign.includeResource=Include resource
 Element.ReportDesign.beforeFactory=Before factory
 Element.ReportDesign.afterFactory=After factory
 Element.ReportDesign.beforeOpenDoc=Before open docment
