Move "units" from ReportDesign to Module, and fix some wrong usage of report design .

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1832,6 +1832,7 @@ Element.Module.includeLibraries=Include libraries
 Element.Module.includeScripts=Include scripts
 Element.Module.includeResource=Include resource
 Element.Module.base=Base
+Element.Module.units=Units
 
 # Library ( Prefix = Element.Library )
 Element.Library.slot.styles=Styles
@@ -1843,7 +1844,6 @@ Element.Library.slot.components=Components
 
 
 #1. Report Design ( Prefix = Element.ReportDesign )
-Element.ReportDesign.units=Units
 Element.ReportDesign.refreshRate=Refresh rate
 Element.ReportDesign.beforeFactory=Before factory
 Element.ReportDesign.afterFactory=After factory
