--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -71,6 +71,7 @@ data.engine.EmptyExpression=The expression cannot be null or empty
 
 #computed column value
 data.engine.BadCompColExpr=The expression for computed column {0} is not valid.
+data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
 data.engine.BadFilterExpr=The filter expression '{0}' is not invalid.
 
 # Wrapper Error
