--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -88,6 +88,8 @@ data.engine.NoParamMetaForDataSource=Cannot get parameter metadata for this type
 data.engine.UnexpectedError=Data engine operation failed due to an unexpected exception. 
 data.engine.JSScriptInvalid=Invalid Javascript expression. Source: {1}, line: {2}, Expression:\n{0}\nScript engine error: {3}
 data.engine.ConvertDataTypeError=Cannot convert the parameter value [{0}] to type [{1}]
+data.engine.CannotInstantiateAggregationFactory=Cannot instantiate aggregation factory [{0}]
+date.engine.DuplicateAggregationName=Duplicate aggregation name: {0}.
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
