Fix Bugzilla Bug 108233  NullPointerException is thrown out when opening attached design file.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -12,6 +12,8 @@ data.engine.UndefinedDataSource=Data source {0} is not defined
 data.engine.UndefinedDataSet=Data set {0} is not defined
 data.engine.UnsupportedDataSourceType=Data source '{0}' is of an unsupported type
 data.engine.UnsupportedDataSetType=Data set '{0}' is of an unsupported type
+data.engine.UnsupportedGroupOnClobAndBLOB=Group on Clob or Blob data [{0}] is unsupported
+data.engine.UnsupportedSortOnClobAndBLOB=Sort on Clob or Blob data [{0}] is unsupported
 
 data.engine.EndOfGroupOnly=This aggregate expression is only available at the end of a group
 data.engine.InvalidAggrGroup=Invalid grouping level for aggregate function: {0}
@@ -101,6 +103,7 @@ odaconsumer.CannotGenerateUrl=Cannot generate URL ({0}) for the classloader.
 odaconsumer.UnsupportedNativeType=Unsupported native type ({0}) for the data set type ({1}) of driver ({2}).
 odaconsumer.UnsupportedDataSetType=The data set type ({0}) is not supported by the driver ({1}).
 odaconsumer.CannotDetermineDefaultDataSetType=Null data set type. Cannot determine the default data set type for the driver ({0}).
+odaconsumer.InvalidDataSetType=Invalid data set type ({0}). Cannot determine the default data set type for the data set ({1}).
 odaconsumer.ParameterNameCannotBeEmptyOrNull=Parameter name cannot be empty or null.
 odaconsumer.ParameterPositionIsOneBased=Parameter position cannot be less than 1.
 odaconsumer.CannotGetParameterTypeName=Cannot get the type name for parameter ({0}).
@@ -156,6 +159,8 @@ odaconsumer.CannotGetBigDecimalFromColumn=Cannot get the decimal value from colu
 odaconsumer.CannotGetDateFromColumn=Cannot get the date value from column ({0}).
 odaconsumer.CannotGetTimeFromColumn=Cannot get the time value from column ({0}).
 odaconsumer.CannotGetTimestampFromColumn=Cannot get the timestamp value column ({0}).
+odaconsumer.CannotGetClobFromColumn=Cannot get the clob value from column ({0})
+odaconsumer.CannotGetBlobFromColumn=Cannot get the blob value from column ({0})
 odaconsumer.CannotGetRowPosition=Cannot get the current row position.
 odaconsumer.CannotCloseResultSet=Cannot close the result set.
 odaconsumer.CannotGetParameterCount=Cannot get the parameter count.
