Feature of disk-based sorting and data manipulation

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -76,6 +76,11 @@ data.engine.BadCompColExpr=The expression for computed column {0} is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
 data.engine.BadFilterExpr=The filter expression '{0}' is not invalid.
 
+#resultsetcache exception
+data.engine.BadDestIndex=The value {0} of destIndex is not valid, which should be between 0 and {1}.
+data.engine.WriteTempError=Exception in writing temporary file for large data set
+data.engine.ReadTempError=Exception in reading temporary file for large data set
+
 # Wrapper Error
 data.engine.DataConversionError=An error happened in data type conversion.
 data.engine.BadDataTypeCondExpr=Invalid data type found in conditional expression.
