BPS30: Migrates BIRT Data Engine to consume DTP ODA; provides plug-in adapter for ODA 2.0.x drivers; migrates FlatFile ODA driver to implement DTP ODA interfaces

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -188,6 +188,7 @@ odaconsumer.CannotClearInParameters=Cannot clear the input parameter values.
 odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
 odaconsumer.CannotGetColumnNativeDataTypeName=Cannot get the native data type name for the column ({0}).
 odaconsumer.CannotGetParameterMetaData=Cannot get ODA driver parameter metadata.
+odaconsumer.CannotLoadOdaAdapter=Unable to load {0} driver; missing the DTP-to-BIRT ODA adapter plug-in ({1}).
 
 odaconsumer.manager.CannotGetNamedResultsAfterExecuteQuery=Cannot get result sets by name after executeQuery() has been called.
 odaconsumer.manager.CannotSetParamBeforePrepare=Cannot set input parameters before statement has been prepared.
