Add the support for library including library.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2579,7 +2579,6 @@ Error.DesignParserException.UNSUPPORTED_ENCODING=The encoding format of this XML
 Error.DesignParserException.PROPERTY_IS_NOT_ENCRYPTABLE=The property "{0}" is not encryptable.
 Error.DesignParserException.UNSUPPORTED_VERSION=The report file of version "{0}" is not supported.
 Error.DesignParserException.INVALID_VERSION=The report version "{0}" is invalid.
-Error.DesignParserException.DUPLICATE_NAMESPACE=The namespace "{0}" has existed already.
 
 #DesignFileException
 Error.DesignFileException.SYNTAX_ERROR=Syntax error found, and see error details.
@@ -2612,4 +2611,6 @@ Error.UserPropertyException.INVALID_DEFINITION=The user property definition is i
 Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
 
 #LibraryException
-Error.LibraryException.LIBRARY_NOT_FOUND=The library "{0}" is not found.
+Error.LibraryException.LIBRARY_NOT_FOUND=The library with the namespace "{0}" is not found.
+Error.LibraryException.DUPLICATE_LIBRARY_NAMESPACE=The library namespace "{0}" exists already.
+Error.LibraryException.LIBRARY_INCLUDED_RECURSIVELY=The library withe the namespace "{0}" is included recursively.
