Support of BLOB and CLOB data types in DTP ODA and BIRT oda consumer (BPS#3). See the link for ODA API Change Control Document in http://www.eclipse.org/birt/wiki/index.php?n=BPS.BPS30

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -97,6 +97,7 @@ data.engine.JSScriptInvalid=Invalid Javascript expression. Source: {1}, line: {2
 data.engine.ConvertDataTypeError=Cannot convert the parameter value [{0}] to type [{1}]
 data.engine.CannotInstantiateAggregationFactory=Cannot instantiate aggregation factory [{0}]
 date.engine.DuplicateAggregationName=Duplicate aggregation name: {0}.
+
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
@@ -164,8 +165,8 @@ odaconsumer.CannotGetBigDecimalFromColumn=Cannot get the decimal value from colu
 odaconsumer.CannotGetDateFromColumn=Cannot get the date value from column ({0}).
 odaconsumer.CannotGetTimeFromColumn=Cannot get the time value from column ({0}).
 odaconsumer.CannotGetTimestampFromColumn=Cannot get the timestamp value column ({0}).
-odaconsumer.CannotGetClobFromColumn=Cannot get the clob value from column ({0})
-odaconsumer.CannotGetBlobFromColumn=Cannot get the blob value from column ({0})
+odaconsumer.CannotGetClobFromColumn=Cannot get the CLOB value from column ({0}).
+odaconsumer.CannotGetBlobFromColumn=Cannot get the BLOB value from column ({0}).
 odaconsumer.CannotGetRowPosition=Cannot get the current row position.
 odaconsumer.CannotCloseResultSet=Cannot close the result set.
 odaconsumer.CannotGetParameterCount=Cannot get the parameter count.
@@ -173,9 +174,11 @@ odaconsumer.CannotGetIntFromParameter=Cannot get the integer value from paramete
 odaconsumer.CannotGetDoubleFromParameter=Cannot get the double value from parameter ({0}).
 odaconsumer.CannotGetStringFromParameter=Cannot get the string value from parameter ({0}).
 odaconsumer.CannotGetBigDecimalFromParameter=Cannot get the decimal value from parameter ({0}).
-odaconsumer.CannotGetDateFromParameter=Cannot get the date value from the parameter ({0}).
-odaconsumer.CannotGetTimeFromParameter=Cannot get the time value from the parameter ({0}).
-odaconsumer.CannotGetTimestampFromParameter=Cannot get the timestamp value from the parameter ({0}).
+odaconsumer.CannotGetDateFromParameter=Cannot get the date value from parameter ({0}).
+odaconsumer.CannotGetTimeFromParameter=Cannot get the time value from parameter ({0}).
+odaconsumer.CannotGetTimestampFromParameter=Cannot get the timestamp value from parameter ({0}).
+odaconsumer.CannotGetBlobFromParameter=Cannot get the BLOB value from parameter ({0}).
+odaconsumer.CannotGetClobFromParameter=Cannot get the CLOB value from parameter ({0}).
 odaconsumer.CannotFindInParameter=Cannot find the input parameter ({0}).
 odaconsumer.CannotSetIntParameter=Cannot set the integer value for parameter ({0}).
 odaconsumer.CannotSetDoubleParameter=Cannot set the double value for parameter ({0}).
