Support the Blob and Clob data

--- a/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/src/org/eclipse/birt/report/data/oda/i18n/Messages.properties
@@ -40,6 +40,8 @@ odajdbc.ResultSetCannotGetBigDecimalValue=Cannot get BigDecimal value in result 
 odajdbc.ResultSetCannotGetDateValue=Cannot get Date value in result set
 odajdbc.ResultSetCannotGetTimeValue=Cannot get Time value in result set
 odajdbc.ResultSetCannotGetTimeStampValue=Cannot get Timestamp value in result set
+odajdbc.ResultSetCannotGetBlobValue=Cannot get Blob value in result set
+odajdbc.ResultSetCannotGetClobValue=Cannot get Clob value in result set
 odajdbc.ResultSetDetermineNull=Cannot determine isNull value in result set
 odajdbc.ResultSetCannotFindColumn=Cannot found column in result set
 
