Add cascading and dynamic parameter new feature.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -101,7 +101,7 @@ Choices.units.ex=exs
 Choices.units.px=pixels
 Choices.units.%=%
 
-#5.paramType
+#5.paramDataType
 Choices.paramType.string=String
 Choices.paramType.float=Float
 Choices.paramType.decimal=Decimal
@@ -465,6 +465,11 @@ Choices.textDataContentType.auto=Auto
 Choices.textDataContentType.plain=Plain
 Choices.textDataContentType.html=HTML
 Choices.textDataContentType.rtf=RTF
+
+#51. paramaValueType
+Choices.paramValueType.static=Static
+Choices.paramValueType.dynamic=Dynamic
+
 
 ###########################################################
 # Classes
@@ -1779,6 +1784,7 @@ Element.JdbcSelectDataSet=JDBC Select Data Set
 Element.Parameter=Parameter
 Element.ScalarParameter=ScalarParameter
 Element.ParameterGroup=Parameter Group
+Element.CascadingParameterGroup=Cascading Parameter Group
 Element.Style=Style
 Element.MasterPage=MasterPage
 Element.ReportItem=Report Item
@@ -1919,6 +1925,7 @@ Element.Parameter.validate=Validation
 Element.Parameter.validate.toolTip=Returns true or false for the custom validation of the parameter
   
 #7. ScalarParameter  ( prefix  Element.ScalarParameter )
+Element.ScalarParameter.type=Type
 Element.ScalarParameter.dataType=Data type
 Element.ScalarParameter.displayPrompt=Display prompt
 Element.ScalarParameter.concealValue=Conceal value
@@ -1942,6 +1949,11 @@ Element.ParameterGroup.startExpanded=Start expanded
 Element.ParameterGroup.helpText=Help text
 Element.ParameterGroup.helpTextID=Help text key
 Element.ParameterGroup.slot.parameters=Parameters
+
+# CascadingParameterGroup (prefix Element.CascadingParameterGroup)
+Element.Element.CascadingParameterGroup.dataSet=Data set
+Element.CascadingParameterGroup.slot.parameters=Parameters
+
 
 #9. MasterPage ( Prefix = Element.MasterPage )
 Element.MasterPage.type=Type
@@ -2549,6 +2561,8 @@ Error.SemanticError.COLUMN_COPY_FORBIDDEN=The copy operation on the column "{0}"
 Error.SemanticError.COLUMN_PASTE_FORBIDDEN=The paste operation on the element "{1}" is forbidden.
 Error.SemanticError.COLUMN_PASTE_DIFFERENT_LAYOUT=The paste area has the different layout with the copied area.
 Error.SemanticError.INVALID_STRUCTURE_REF=The element "{0}" has property "{1}" that refers an undefined structure "{2}".
+Error.SemanticError.INVALID_SCALAR_PARAMETER_TYPE=Type scalar parameter "{0}" is not valid. Parameters within a cascading parameter group should be dynamic type.  
+
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
