Support css style sheet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2628,3 +2628,15 @@ Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
 Error.LibraryException.LIBRARY_NOT_FOUND=The library with the namespace "{0}" is not found.
 Error.LibraryException.DUPLICATE_LIBRARY_NAMESPACE=The library namespace "{0}" exists already.
 Error.LibraryException.LIBRARY_INCLUDED_RECURSIVELY=The library withe the namespace "{0}" is included recursively.
+
+#StyleSheetException
+Error.StyleSheetException.STYLE_SHEET_NOT_FOUND=The style sheet resource is not found.
+Error.StyleSheetException.SYNTAX_ERROR=There are some syntax errors inconsistent with CSS2.
+
+#StyleSheetParserException
+Error.StyleSheetParserException.RULE_NOT_SUPPORTED=The rule "{0}" is not supported.
+Error.StyleSheetParserException.STYLE_NOT_SUPPORTED=The style "{0}" is not supported.
+Error.StyleSheetParserException.PROPERTY_NOT_SUPPORTED=The value "{1}" for CSS2 property "{0}" is not supported.
+Error.StyleSheetParserException.INVALID_SHORT_HAND_CSSPROPERTY_VALUE=The value "{1}" of short-hand property "{0}" is invalid for CSS2 grammar.
+Error.StyleSheetParserException.INVALID_SIMPLE_CSSPROPERTY_VALUE=The value "{1}" for property "{0}" is invalid.		
+	
