Add a message entry for New.CascadingParameterGroup

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2428,6 +2428,7 @@ Message.RemoveItem=Remove Item
 
 New.ReportDesign=ReportDesign
 New.Parameter=Parameter
+New.CascadingParameterGroup=CascadingParameterGroup
 New.ScalarParameter=Parameter
 New.ParameterGroup=ParameterGroup
 New.Style=Style
