--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -76,6 +76,12 @@ data.engine.BadCompColExpr=The expression for computed column {0} is not valid.
 data.engine.CompCol.WrongDataType=The data type of computed column "{0}" is {1}, but one of its value is "{2}", which cannot be converted to {1}.
 data.engine.BadFilterExpr=The filter expression '{0}' is not invalid.
 
+#clob and blob error
+data.engine.opencloberror=Open clob character stream error
+data.engine.readcloberror=Read clob character stream error
+data.engine.openbloberror=Open blob binaryStream stream error
+data.engine.readbloberror=Read blob binaryStream stream error
+
 #resultsetcache exception
 data.engine.BadDestIndex=The value {0} of destIndex is not valid, which should be between 0 and {1}.
 data.engine.WriteTempError=Exception in writing temporary file for large data set
