--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1943,7 +1943,8 @@ Element.ScalarParameter.selectionList=Selection list
 Element.ScalarParameter.selectionList.mustMatch=Must match
 Element.ScalarParameter.selectionList.fixedOrder=Fixed order
 Element.ScalarParameter.selectionList.selectionList=Selection list
-Element.ScalarParameter.promptText=Prompt Text
+Element.ScalarParameter.promptText=Prompt text
+Element.ScalarParameter.listLimit=List limit
   
 #8. ParameterGroup  ( prefix  Element.ParameterGroup )
 Element.ParameterGroup.startExpanded=Start expanded
