Add multi-pass support to dte

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -24,6 +24,7 @@ data.engine.NoSubQueryName=Cannot find subquery with name '{0}'
 
 data.engine.DataSourceMissingExtId=Missing extension id in definition of data source {0}
 data.engine.NullGroupStart=The group start value cannot be null
+data.engine.UnsupportedDirectNestedAggregate=Direct nested aggregate is unsupported
 
 data.engine.ResultClosed=Result iterator has been closed.
 data.engine.NoCurrentRow=Result iterator has no current row. It either has not started or has ended.
@@ -37,7 +38,8 @@ data.engine.InvalidGroupLevel=Invalid group level: {0}
 data.engine.InvalidGroupKeyName=Invalid group key column name: {0}
 data.engine.BadCloseScript=Failed to evaluate closeScript in CustomDataSet
 data.engine.InvalidCustomFieldIdx=Invalid custom field index: {0}
-
+data.engine.InvalidGroupName=The group name is invalid.
+data.engine.DuplicateGroupName=The group names are duplicated.
 data.engine.BadOpenScript=Failed to evaluate openScript in CustomDataSet
 data.engine.DataSourceIsOpen=Data source is already open
 data.engine.DataSourceNotOpen=Data source is not open
@@ -104,6 +106,7 @@ data.engine.ConvertDataTypeError=Cannot convert the parameter value [{0}] to typ
 data.engine.CannotInstantiateAggregationFactory=Cannot instantiate aggregation factory [{0}]
 date.engine.DuplicateAggregationName=Duplicate aggregation name: {0}.
 data.engine.incorrectGroupKeyValues=The given group key values array is incorrect
+data.engine.NoExpressionProcessorAvailable=No ExpressionProcessor available.
 # oda consumer error
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position is 1-based and cannot be less than 1.
