Enhance the element ID feature and refactor id type from int to long.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2596,6 +2596,8 @@ Error.DesignParserException.UNSUPPORTED_ENCODING=The encoding format of this XML
 Error.DesignParserException.PROPERTY_IS_NOT_ENCRYPTABLE=The property "{0}" is not encryptable.
 Error.DesignParserException.UNSUPPORTED_VERSION=The report file of version "{0}" is not supported.
 Error.DesignParserException.INVALID_VERSION=The report version "{0}" is invalid.
+Error.DesignParserException.INVALID_ELEMENT_ID=The ID {1} in the {0} is invalid.
+Error.DesignParserException.DUPLICATE_ELEMENT_ID=ID of the {0} is duplicate with that of {1}.  
 
 #DesignFileException
 Error.DesignFileException.SYNTAX_ERROR=Syntax error found, and see error details.
