Support themes in library and theme property on design and library.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1816,6 +1816,7 @@ Element.ScriptDataSet=Script Data Set
 Element.Listing=Listing
 Element.OdaDataSet=ODA Data Set
 Element.OdaDataSource=ODA Data Source
+Element.Theme=Theme
 
 ###########################################################
 # Element property names
@@ -1839,6 +1840,7 @@ Element.Module.includeScripts=Include scripts
 Element.Module.includeResource=Include resource
 Element.Module.base=Base
 Element.Module.units=Units
+Element.Module.theme=Theme
 
 # Library ( Prefix = Element.Library )
 Element.Library.slot.styles=Styles
@@ -1847,7 +1849,7 @@ Element.Library.slot.dataSources=Data Sources
 Element.Library.slot.dataSets=Data Sets
 Element.Library.slot.pageSetup=Page Setup
 Element.Library.slot.components=Components
-
+Element.Library.slot.themes=Themes
 
 #1. Report Design ( Prefix = Element.ReportDesign )
 Element.ReportDesign.refreshRate=Refresh rate
@@ -2250,6 +2252,9 @@ Element.DesignElement.customXml=Custom XML
 Element.DesignElement.propertyMasks=Property masks
 Element.DesignElement.userProperties=User Properties
 
+#37 Theme ( Prefix Element.Theme )
+Element.Theme.slot.styles=Styles
+
 ###########################################################
 # Predefined style
 Style.Report=Report
@@ -2462,6 +2467,10 @@ New.ScriptDataSource=ScriptDataSource
 New.ScriptDataSet=ScriptDataSet
 New.OdaDataSource=OdaDataSource
 New.OdaDataSet=OdaDataSet
+
+###########################################################
+#Default theme name.
+Theme.defaultThemeName=defaultTheme
 
 ###########################################################
 # Error Messages
