Fix the library namespace bug & add check for adding an element without name into component slot

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2487,7 +2487,7 @@ Error.ContentException.HAS_NO_CONTAINER=The {0} has no container, which means it
 Error.ContentException.MOVE_FORBIDDEN=The {0} cannot be moved, since it or its contents are referred.
 Error.ContentException.HAS_DESCENDENTS=The {0} cannot be moved or removed, since its contents has descendents.
 Error.ContentException.INVALID_CONTEXT_CONTAINMENT=The {0} is not allowed directly or indirectly inside the {1}''s slot({2}).
-
+Error.ContentException.CONTENT_NAME_REQUIRED=The {0} is not allowed to be added into the {1}''s slot {2} because it does not have a name.
 
 #CustomMsgException
 Error.CustomMsgException.RESOURCE_KEY_REQUIRED=The resource key of translation must be provided.
