--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -67,6 +67,7 @@ data.engine.BadGroupKeyType=Group key has unsupported data type: {0}
 data.engine.group.interval=Set a {0} interval on a column with type {1} is not supported
 data.engine.group.interval.Rowid=Except numeric interval, any other interval type is not supported on rowId column
 data.engine.NoSupportFilterOnGroup=Filtering on groups is not current supported.
+data.engine.InvalidTopBottomNArgument=The argument of TopN/BottomN filters must be either zero or positive integer.
 
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
 data.engine.ResetRateGuess=User should reset a new rate guess
