Added global js variable: CurrentPage and TotalPage.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1555,6 +1555,10 @@ Class.GlobalBirt.config=Birt Config
 Class.GlobalBirt.config.toolTip=Returns an array of configuration variables available to the report. Represented as a name/value pair
 Class.GlobalBirt.report=Birt Report
 Class.GlobalBirt.report.toolTip=Provides access to all information about the report and the context in which the report is running
+Class.GlobalBirt.CurrentPage=Current Page Number
+Class.GlobalBirt.CurrentPage.toolTip=Returns the number of the current page.
+Class.GlobalBirt.TotalPage=Total Page Number
+Class.GlobalBirt.TotalPage.toolTip=Returns the number of the total pages.
 
 #30 DataSource
 
