Refactor newElementFrom in ElementFactory and add location checks for included libraries.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2509,6 +2509,7 @@ Error.ExtendsException.SELF_EXTEND=The {0} cannot extend itself.
 Error.ExtendsException.CIRCULAR=The circular extension is found, because the {0} extends from {1} already.
 Error.ExtendsException.UNNAMED_PARENT=The parent element has no name.
 Error.ExtendsException.PARENT_NOT_IN_COMPONENT=The parent element "{0}" is not in component slot of report design.
+Error.ExtendsException.PARENT_NOT_INCLUDE=The library for the parent element "{0}" is not included.
     
 #NameException
 Error.NameException.NAME_REQUIRED=The name of {0} is required.
