Added eclipse tracing mechanism. Added filter property for ExtendedItem.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2185,6 +2185,7 @@ Element.TextData.contentType=Content type
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
 Element.ExtendedItem.extensionName=Extension name
 Element.ExtendedItem.extension=Extension name
+Element.ExtendedItem.filter=Filter
 
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
