Add topN/bottomN/topPercent/bottomPercent/group filtering/group sorting feature to DtE

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -68,7 +68,7 @@ data.engine.group.interval=Set a {0} interval on a column with type {1} is not s
 data.engine.group.interval.Rowid=Except numeric interval, any other interval type is not supported on rowId column
 data.engine.NoSupportFilterOnGroup=Filtering on groups is not current supported.
 data.engine.InvalidTopBottomNArgument=The argument of TopN/BottomN filters must be either zero or positive integer.
-
+data.engine.InvalidTopBottomPercentArgument=The argument of TopPercent/BottomPercent filters must be both positive and less than/equal to 100;
 data.engine.BadAggrFuncParam=Illegal parameter for aggregate function {0}
 data.engine.ResetRateGuess=User should reset a new rate guess
 data.engine.UnsupportedCondOp=Conditional operator '{0}' is not supported
@@ -218,3 +218,4 @@ odaconsumer.manager.MaxConcurrentStatementsReached=Maximum active concurrent sta
 odaconsumer.manager.PrepareFailed=Prepare failed.
 odaconsumer.manager.CannotGetResultSetMdBeforePrepare=Cannot get result set metadata before statement has been prepared.
 odaconsumer.manager.CannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
+data.engine.GroupFilteringIsNotAllowedInGiverQuery=Group filtering cannot coexist with computed columns/filters/sorts/groups that are using Aggregations.
