Model Scripting support related changes.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1836,6 +1836,8 @@ Element.Module.descriptionID=Description key
 Element.Module.comments=Comments
 Element.Module.initialize=Intialize
 Element.Module.initialize.toolTip=Called when the report starts executing.
+Element.Module.initialize.reportContext=Report context
+Element.Module.initialize.object=Object
 Element.Module.colorPalette=Color palette
 Element.Module.configVars=Config variables
 Element.Module.images=Images
@@ -1857,14 +1859,32 @@ Element.Library.slot.themes=Themes
 
 #1. Report Design ( Prefix = Element.ReportDesign )
 Element.ReportDesign.refreshRate=Refresh rate
+Element.ReportDesign.eventHandlerClass=Event handler class
 Element.ReportDesign.beforeFactory=Before factory
+Element.ReportDesign.beforeFactory.handle=handle
+Element.ReportDesign.beforeFactory.reportContext=Report context
+Element.ReportDesign.beforeFactory.object=Object
 Element.ReportDesign.afterFactory=After factory
+Element.ReportDesign.afterFactory.reportContext=Report context
+Element.ReportDesign.afterFactory.object=Object
 Element.ReportDesign.beforeOpenDoc=Before open docment
+Element.ReportDesign.beforeOpenDoc.reportContext=Report context
+Element.ReportDesign.beforeOpenDoc.object=Object
 Element.ReportDesign.afterOpenDoc=After open document
+Element.ReportDesign.afterOpenDoc.reportContext=Report context
+Element.ReportDesign.afterOpenDoc.object=Object
 Element.ReportDesign.beforeCloseDoc=Before close document
+Element.ReportDesign.beforeCloseDoc.reportContext=Report context
+Element.ReportDesign.beforeCloseDoc.object=Object
 Element.ReportDesign.afterCloseDoc=After close document
+Element.ReportDesign.afterCloseDoc.reportContext=Report context
+Element.ReportDesign.afterCloseDoc.object=Object
 Element.ReportDesign.beforeRender=Before render
+Element.ReportDesign.beforeRender.reportContext=Report context
+Element.ReportDesign.beforeRender.object=Object
 Element.ReportDesign.afterRender=After render
+Element.ReportDesign.afterRender.reportContext=Report context
+Element.ReportDesign.afterRender.object=Object
 Element.ReportDesign.beforeFactory.toolTip=Called at the start of the Factory after the initialize( ) method and before opening the report document (if any)
 Element.ReportDesign.afterFactory.toolTip=Called at the end of the Factory after closing the report document (if any). This is the last method called in the Factory
 Element.ReportDesign.beforeOpenDoc.toolTip=Called just before opening the report document in the Factory
@@ -1890,6 +1910,7 @@ Element.ReportElement.propertyMask=Property mask
 Element.ReportElement.name=Name
 Element.ReportElement.extends=Extends
 Element.ReportElement.style=Style
+Element.ReportElement.eventHandlerClass=Event handler class
 
 #3. JdbcDataSource  ( prefix  Element.JdbcDataSource )
 Element.JdbcDataSource.url=Url
@@ -2062,10 +2083,21 @@ Element.ReportItem.y=Y
 Element.ReportItem.height=Height
 Element.ReportItem.width=Width
 Element.ReportItem.visibility=Visibility  
+Element.ReportItem.onPrepare=On prepare
+Element.ReportItem.onPrepare.toolTip=TBD
+Element.ReportItem.onPrepare.handle=Handle
+Element.ReportItem.onPrepare.reportContext=Report context
+Element.ReportItem.onPrepare.object=Object
 Element.ReportItem.onCreate=On create  
 Element.ReportItem.onCreate.toolTip=Executed when the element is created in the Factory
+Element.ReportItem.onCreate.instance=Instance
+Element.ReportItem.onCreate.reportContext=Report context
+Element.ReportItem.onCreate.object=Object
 Element.ReportItem.onRender=On render  
 Element.ReportItem.onRender.toolTip=Executed when the element is prepared for rendering in the Presentation Engine
+Element.ReportItem.onRender.instance=Instance
+Element.ReportItem.onRender.reportContext=Report context
+Element.ReportItem.onRender.object=Object
 Element.ReportItem.paramBindings=Parameter bindings  
   
 #11.Label  ( prefix  Element.Label )
@@ -2102,9 +2134,25 @@ Element.ListingGroup.intervalBase=Interval base
 Element.ListingGroup.interval=Interval
 Element.ListingGroup.intervalRange=Interval range
 Element.ListingGroup.sortDirection=Sort Direction
+Element.ListingGroup.eventHandlerClass=Event handler class
 Element.ListingGroup.pageBreakBefore=Page break before
 Element.ListingGroup.pageBreakAfter=Page break after
 Element.ListingGroup.filter=Filter
+Element.ListingGroup.onPrepare=On prepare
+Element.ListingGroup.onPrepare.toolTip=TBD
+Element.ListingGroup.onPrepare.handle=Handle
+Element.ListingGroup.onPrepare.reportContext=Report context
+Element.ListingGroup.onPrepare.object=Object
+Element.ListingGroup.onCreate=On create
+Element.ListingGroup.onCreate.toolTip=TBD
+Element.ListingGroup.onCreate.instance=Instance
+Element.ListingGroup.onCreate.reportContext=Report context
+Element.ListingGroup.onCreate.object=Object
+Element.ListingGroup.onRender=On render
+Element.ListingGroup.onRender.toolTip=TBD
+Element.ListingGroup.onRender.instance=Instance
+Element.ListingGroup.onRender.reportContext=Report context
+Element.ListingGroup.onRender.object=Object
 Element.ListingGroup.onStart=On start
 Element.ListingGroup.onStart.toolTip=Called after the data set is open but before the header band is created, but before the first row is retrieved from the data set for this element
 Element.ListingGroup.onRow=On row
@@ -2145,7 +2193,24 @@ Element.Column.alignment=Alignment
 Element.Row.visibility=Visibility
 Element.Row.height=Height
 Element.Row.bookmark=Bookmark
+Element.Row.eventHandlerClass=Event handler class
 Element.Row.slot.cells=Cells
+Element.Row.onPrepare=On prepare
+Element.Row.onPrepare.toolTip=TBD
+Element.Row.onPrepare.handle=Handle
+Element.Row.onPrepare.reportContext=Report context
+Element.Row.onPrepare.object=Object
+Element.Row.onCreate=On create
+Element.Row.onCreate.toolTip=TBD 
+Element.Row.onCreate.instance=Instance
+Element.Row.onCreate.dataRow=Data row
+Element.Row.onCreate.reportContext=Report context
+Element.Row.onCreate.object=Object
+Element.Row.onRender=On render
+Element.Row.onRender.toolTip=TBD
+Element.Row.onRender.instance=Instance
+Element.Row.onRender.reportContext=Report context
+Element.Row.onRender.object=Object
   
 #22.Cell  ( prefix  Element.Cell )
 Element.Cell.column=Column
@@ -2156,6 +2221,23 @@ Element.Cell.drop=Drop
 Element.Cell.height=Height
 Element.Cell.slot.content=Content
 Element.Cell.width=Width
+Element.Cell.eventHandlerClass=Event handler class
+Element.Cell.onPrepare=On prepare
+Element.Cell.onPrepare.toolTip=TBD
+Element.Cell.onPrepare.handle=Handle
+Element.Cell.onPrepare.reportContext=Report context
+Element.Cell.onPrepare.object=Object
+Element.Cell.onCreate=On create
+Element.Cell.onCreate.toolTip=TBD
+Element.Cell.onCreate.instance=Instance
+Element.Cell.onCreate.dataRow=Data row
+Element.Cell.onCreate.reportContext=Report context
+Element.Cell.onCreate.object=Object
+Element.Cell.onRender=On render
+Element.Cell.onRender.toolTip=TBD
+Element.Cell.onRender.instance=Instance
+Element.Cell.onRender.reportContext=Report context
+Element.Cell.onRender.object=Object
   
 #23.Image  ( prefix  Element.Image )
 Element.Image.altText=Alternative text
@@ -2216,6 +2298,7 @@ Element.ScriptDataSet.close.toolTip=Closes the data set
 #32 Listing ( prefix Element.Lising )
 Element.Listing.sorting=Sorting
 Element.Listing.filter=Filter
+Element.Listing.pageBreakInterval=Page break interval
 Element.Listing.onStart=On start
 Element.Listing.onStart.toolTip=Called after the data set is open but before the header band is created, but before the first row is retrieved from the data set for this element
 Element.Listing.onRow=On row
@@ -2492,12 +2575,8 @@ Error.ContentException.HAS_NO_CONTAINER=The {0} has no container, which means it
 Error.ContentException.MOVE_FORBIDDEN=The {0} cannot be moved, since it or its contents are referred.
 Error.ContentException.HAS_DESCENDENTS=The {0} cannot be moved or removed, since its contents has descendents.
 Error.ContentException.INVALID_CONTEXT_CONTAINMENT=The {0} is not allowed directly or indirectly inside the {1}''s slot({2}).
-<<<<<<< Messages.properties
 Error.ContentException.STRUCTURE_CHANGE_FORBIDDEN=Element "{0}" is child element or a virtual element( inside the child ), can not change its structure.
-		
-=======
 Error.ContentException.CONTENT_NAME_REQUIRED=The {0} is not allowed to be added into the {1}''s slot {2} because it does not have a name.
->>>>>>> 1.89
 
 #CustomMsgException
 Error.CustomMsgException.RESOURCE_KEY_REQUIRED=The resource key of translation must be provided.
